src/test/ui/type-alias-impl-trait/self-referential-2.stderr
error[E0277]: can't compare `i32` with `Foo`
  --> $DIR/self-referential-2.rs:6:13
   |
LL | fn bar() -> Bar {
   |             ^^^ no implementation for `i32 == Foo`
LL |     42_i32
   |     ------ return type was inferred to be `i32` here
   |
   = help: the trait `PartialEq<Foo>` is not implemented for `i32`
   = help: the following other types implement trait `PartialEq<Rhs>`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and 6 others

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
